tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/unshadowable-for-index.wyst
module demo
fn main() { for widen in 0 ..< 1 {} }
